--- a/ar-game.html
+++ b/ar-game.html
@@ -3,84 +3,24 @@
 <head>
     <meta charset="utf-8">
     <title>Apple Catch AR Game</title>
-    <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js/aframe/build/aframe-ar.js"></script>
+    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js/aframe/build/aframe-ar.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/aframe-physics-system@4.0.0/dist/aframe-physics-system.min.js"></script>
 
     <script>
         AFRAME.registerComponent('apple-spawner', {
             init: function () {
-                this.score = 0;
-                this.timeLeft = 30;
-                this.gameOver = false;
-                this.scoreTextEl = document.querySelector('#scoreText');
-                this.timerTextEl = document.querySelector('#timerText');
-                this.backgroundMusic = document.querySelector('#backgroundMusic');
-                this.collectSound = document.querySelector('#collectSound');
-                this.gameOverSound = document.querySelector('#gameOverSound');
-
-                this.onAppleCollected = this.onAppleCollected.bind(this);
-                this.el.addEventListener('apple-collected', this.onAppleCollected);
-
-                this.startGame();
+                this.spawnApples();
             },
 
-            startGame: function () {
-                this.backgroundMusic.components.sound.playSound();
-                this.scheduleNextSpawn();
-
-                this.timerInterval = setInterval(() => {
-                    if (this.gameOver) return;
-                    this.timeLeft--;
-                    this.timerTextEl.setAttribute('text', 'value', 'Time: ' + this.timeLeft);
-                    if (this.timeLeft <= 0) {
-                        this.endGame();
-                    }
-                }, 1000);
-            },
-
-            scheduleNextSpawn: function () {
-                if (this.gameOver) return;
-                setTimeout(() => {
-                    this.spawnApple();
-                }, 2000);
-            },
-
-            spawnApple: function () {
-                if (this.gameOver) return;
-
-                const appleEl = document.createElement('a-entity');
-                appleEl.classList.add('apple', 'clickable');
-                appleEl.setAttribute('gltf-model', '#appleModel');
-                appleEl.setAttribute('scale', '0.5 0.5 0.5');
-                appleEl.setAttribute('position', `${this.random(-5, 5)} ${this.random(6, 10)} ${this.random(-5, 5)}`);
-                appleEl.setAttribute('dynamic-body', 'shape: auto; mass: 1');
-                
-                appleEl.addEventListener('click', () => {
-                    this.el.removeChild(appleEl);
-                    this.el.emit('apple-collected');
-                    this.collectSound.components.sound.playSound();
-                });
-
-                this.el.appendChild(appleEl);
-                this.scheduleNextSpawn();
-            },
-
-            onAppleCollected: function () {
-                if (this.gameOver) return;
-                this.score++;
-                this.scoreTextEl.setAttribute('text', 'value', 'Score: ' + this.score);
-            },
-
-            endGame: function () {
-                this.gameOver = true;
-                clearInterval(this.timerInterval);
-                this.backgroundMusic.components.sound.stopSound();
-                this.gameOverSound.components.sound.playSound();
-
-                setTimeout(() => {
-                    alert(`Game Over! You collected ${this.score} apples.`);
-                }, 2000);
+            spawnApples: function () {
+                for (let i = 0; i < 5; i++) {
+                    const appleEl = document.createElement('a-entity');
+                    appleEl.setAttribute('gltf-model', '#appleModel');
+                    appleEl.setAttribute('scale', '0.5 0.5 0.5');
+                    appleEl.setAttribute('position', `${this.random(-2, 2)} ${this.random(1, 3)} ${this.random(-2, 2)}`);
+                    this.el.sceneEl.appendChild(appleEl);
+                }
             },
 
             random: function (min, max) {
@@ -89,40 +29,16 @@
         });
     </script>
 
-    <style>
-        body { margin: 0; padding: 0; }
-        html, body, #gameScene { width: 100%; height: 100%; }
-    </style>
 </head>
-<body style="margin: 0; overflow: hidden;">
-    <!-- AR.js сцена -->
+<body>
     <a-scene embedded arjs>
         <a-assets>
-            <!-- 3D модель яблока (экспортированная из Blender) -->
             <a-asset-item id="appleModel" src="models/apple.glb"></a-asset-item>
-            <!-- Аудио файлы --> 
-            <audio id="bgMusic" src="audio/background.mp3" preload="auto"></audio>
-            <audio id="collect" src="audio/collect.mp3" preload="auto"></audio>
-            <audio id="gameOver" src="audio/gameover.mp3" preload="auto"></audio>
         </a-assets>
 
-        <!-- Фоновая музыка и звуковые эффекты --> 
-        <a-entity id="backgroundMusic" sound="src: #bgMusic; autoplay: true; loop: true"></a-entity>
-        <a-entity id="collectSound" sound="src: #collect"></a-entity>
-        <a-entity id="gameOverSound" sound="src: #gameOver"></a-entity>
-
-        <!-- Камера AR с помощью AR.js -->
         <a-camera gps-camera rotation-reader></a-camera>
-
-        <!-- Маркер для появления объектов -->
-        <a-marker preset="hiro">
-            <a-entity id="scoreText" text="value: Score: 0; color: #FFF; width: 3" position="0 1 0.1"></a-entity>
-            <a-entity id="timerText" text="value: Time: 30; color: #FFF; width: 3" position="0 0.8 0.1"></a-entity>
-        </a-marker>
-
-        <!-- Земля для AR, можно использовать для создания фона -->
-        <a-plane position="0 0 0" width="20" height="20" color="#228B22" static-body></a-plane>
-
+        
+        <a-entity apple-spawner></a-entity>
     </a-scene>
 </body>
 </html>
